feat: added fields for book request
- gen-swagger
